apps/authentik/k8s/db.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentik-postgresql
  namespace: authentik
spec:
  strategy:
    type: Recreate
  revisionHistoryLimit: 2
  replicas: 1
  selector:
    matchLabels:
      app: authentik-postgresql
  template:
    metadata:
      labels:
        app: authentik-postgresql
    spec:
      containers:
        - name: postgres
          image: "postgres:18-alpine@sha256:d3e1620b530c944afa6e887d22eb899824da68e19c52024bf98f5220c88a65b2"
          ports:
            - name: postgres
              containerPort: 5432
          startupProbe:
            exec:
              command: ["pg_isready", "-U", "authentik", "-d", "authentik"]
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 30
          livenessProbe:
            exec:
              command: ["pg_isready", "-U", "authentik", "-d", "authentik"]
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            exec:
              command: ["pg_isready", "-U", "authentik", "-d", "authentik"]
            periodSeconds: 10
            timeoutSeconds: 5
          securityContext:
            runAsUser: 70
            runAsGroup: 70
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: 20m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql
            - name: dshm
              mountPath: /dev/shm
      volumes:
        - name: data
          hostPath:
            path: /storage/apps/authentik/postgresql
            type: Directory
        - name: dshm
          emptyDir:
            medium: Memory
            sizeLimit: 256Mi
