apps/authentik/k8s/db.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik-postgresql
  namespace: authentik
spec:
  type: ClusterIP
  selector:
    app: authentik-postgresql
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
      protocol: TCP
