apps/authentik/k8s/server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authentik
  namespace: authentik
spec:
  type: ClusterIP
  selector:
    app: authentik
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: metrics
      port: 9300
      targetPort: 9300
      protocol: TCP
