apps/authentik/k8s/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: authentik
spec:
  parentRefs:
    - name: homelab
      namespace: traefik
      sectionName: https
  hostnames:
    - auth.biplane.v6.rocks
  rules:
    - backendRefs:
        - name: authentik
          port: 80
